--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -41,35 +42,42 @@
     "@tailwindcss/typography": "latest",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "3.0.0",
     "embla-carousel-react": "8.5.1",
+    "fs": "^0.0.1-security",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "^5.0.0-beta.27",
+    "next-auth": "^4.22.0",
     "next-themes": "^0.4.4",
-    "prisma": "^6.6.0",
+    "nodemailer": "^6.10.1",
+    "path": "^0.12.7",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
+    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
